Vertically centered columns and covered button fix
- Centered some of the columns vertically
-Fixed an error with the front page where some buttons where under the
text and hence non-clickable

--- a/css/dme65.css
+++ b/css/dme65.css
@@ -165,6 +165,17 @@ body {
     padding-top: 70px;
 }
 
+.img-responsive {
+    width: 100%;
+    max-width: 100%;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
+
 hr {
     border: none;
     height: 1px;
